@@ -1,3 +1,9 @@
+2022-10-01  Jacob Bachmeyer  <jcb@gnu.org>
+
+	PR58065
+
+	* testsuite/runtest.libs/dg.test: Add more unit tests.
+
 2022-09-30  Jacob Bachmeyer  <jcb@gnu.org>
 
 	PR58065
